clean up,  remove lmdbjava and graal binding